--- a/softparty/formulario.html
+++ b/softparty/formulario.html
@@ -55,7 +55,10 @@
     </div>
     <insert:link relhref="img/wasa.svg">
 </body>
-
+<img src="img/imagen.svg" style="width: 100%; max-width: 500px;" {
+            text-align: center;
+        }
+>
 </html>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -165,4 +168,5 @@
             });
         });
     })();
+
 </script>
